# valet

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SETUP.md
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml
src/: helpers.rs  learning.rs  lib.rs  metadata.rs  persist.rs  replacements.rs  state.rs  statics.rs
vm/: build-rocksdb.sh  install-deps.sh  lima-ssh.sh  lima-start.sh  lima-test.sh  lima.yaml  provision.sh  test-compaction-styles.sh
